# Data.Doublets

./: .gitignore  .gitmodules  .gitpod.yml  .travis.yml  Doublet.cs  Hybrid.cs  ILinksExtensions.cs  Link.cs  Makefile  Platform.Data.Doublets.csproj  Platform.Data.Doublets.sln  Platform.Data.Doublets.sln.DotSettings  README.html  README.md  README.ru.html  README.ru.md  UInt64Link.cs  UInt64LinksTransactionsLayer.cs  docfx.json  fmt.py  fmt.sh  format-csharp-files.py  format-document.sh  generate-pdf.sh  index.html  index.json  index.md  manifest.json  out.csv  publish-bin.sh  publish-docs.sh  push-nuget.bat  push-nuget.sh  toc.html  toc.yml  xrefmap.yml
c/: CMakeLists.txt  ffi.h  ffi.h.gch
c/Platform.Data.Doublets/: FfiLinks.h  Platform.Data.Doublets.h
c/Platform.Data.Doublets.Tests/: FfiTest.c
c/Platform.Data.Doublets/Memory/Ffi/: FfiLinks.h
c/src/: FfiLinks.h  LinksConstants.h  Platform.Data.Doublets.h  Range.h
c/tests/: FfiTest.c  FfiTests.c  FfiTests.cpp
cpp/: CMakeLists.txt  build_and_test_gitpod.sh  build_ffi.sh  conanfile.txt  install-local-conan-dependencies.sh  run-tests-gitpod.sh  run_benchmarks.sh  run_tests.sh  setup-gitpod.sh  setup.sh
cpp/Platform.Data.Doublets/: Doublet.h  DoubletComparer.h  ILinks.h  ILinksExtensions.h  ISynchronizedLinks.h  Link.h  LinkExtensions.h  LinksOperatorBase.h  LinksOptions.h  Platform.Data.Doublets.TemplateLibrary.nuspec  Platform.Data.Doublets.h  SynchronizedLinks.h  UInt64LinksExtensions.h  UInt64LinksTransactionsLayer.h  WriteHandlerState.h
cpp/Platform.Data.Doublets.Benchmarks/: AllBenchmarks.cpp  CheckDefaultHandlerOrJustCallBenchmarks.cpp  CreateMillionPointsBenchmarks.cpp  MemoryBenchmarks.cpp  Program.cpp
cpp/Platform.Data.Doublets.Profiling/: AllProfilings.cpp  CreatePointsProfiling.h
cpp/Platform.Data.Doublets.Tests/: AllTests.cpp  DynamicPolymorphismGenericLinksTests.cpp  DynamicPolymorphismSplitMemoryGenericLinksTests.cpp  GenericLinksTests.cpp  ILinksBasicTests.cpp  ILinksTestExtensions.h  LinkTypeTests.cpp  LinksConstantsTests.cpp  ResizableDirectMemoryLinksTests.cpp  ScopeTests.cpp  SplitMemoryGenericLinksTests.cpp  SplitMemoryUInt32LinksTests.cpp  SplitMemoryUInt64LinksTests.cpp  TestExtensions.h  Uint64LinksExtensionsTests.cpp  UnitedMemoryLinksFfiTests.cpp  UnitedMemoryUInt32LinksTests.cpp  UnitedMemoryUInt64LinksTests.cpp
cpp/Platform.Data.Doublets.Tests/Dynamic/: GenericLinksTests.cpp  ILinksTests.cpp  SplitMemoryGenericLinksTests.cpp
cpp/Platform.Data.Doublets.Tests/Static/: GenericLinksTests.cpp  SplitMemoryGenericLinksTests.cpp
cpp/Platform.Data.Doublets/CriterionMatchers/: TargetMatcher.h
cpp/Platform.Data.Doublets/Decorators/: Decorators.h  LinksCascadeUniquenessAndUsagesResolver.h  LinksCascadeUsagesResolver.h  LinksDecoratorBase.h  LinksDisposableDecoratorBase.h  LinksInnerReferenceExistenceValidator.h  LinksItselfConstantToSelfReferenceResolver.h  LinksNonExistentDependenciesCreator.h  LinksNullConstantToSelfReferenceResolver.h  LinksUniquenessResolver.h  LinksUniquenessValidator.h  LinksUsagesValidator.h  NonNullContentsLinkDeletionResolver.h  UInt32Links.h  UInt64Links.h  UniLinks.h
cpp/Platform.Data.Doublets/Ffi/: Links.h  LinksBase.h
cpp/Platform.Data.Doublets/Memory/: ILinksListMethods.h  ILinksTreeMethods.h  IndexTreeType.h  LinksHeader.h
cpp/Platform.Data.Doublets/Memory/Split/: RawLinkDataPart.h  RawLinkIndexPart.h
cpp/Platform.Data.Doublets/Memory/United/: RawLink.h
cpp/Platform.Data.Doublets/PropertyOperators/: PropertiesOperator.h  PropertyOperator.h
cpp/Platform.Data.Doublets/Stacks/: Stack.h  StackExtensions.h
rust/: .gitignore  Cargo.toml  README.md  out.csv  rustfmt.toml
rust/benches/: benchmark.rs
rust/doublets/: Cargo.toml
rust/doublets-decorators/: Cargo.toml
rust/doublets-decorators/src/: cascade_unique_resolver.rs  cascade_usages_resolver.rs  ilinks_decorator.rs  lib.rs  non_null_deletion_resolver.rs  unique_resolver.rs  unique_validator.rs  usages_validator.rs
rust/doublets/benches/: benchmark.rs  iter.rs
rust/doublets/src/: lib.rs  test_extensions.rs
rust/doublets/src/data/: doublets.rs  error.rs  generator.rs  handler.rs  link.rs  mod.rs  traits.rs
rust/doublets/src/mem/: header.rs  ilinks_tree_methods.rs  links_traits.rs  mod.rs  traits.rs
rust/doublets/src/num/: mod.rs
rust/doublets/src/tests/: crud.rs  hybrid.rs  ilinks_basic.rs  mod.rs  sync.rs
rust/doublets/tests/: dyn.rs  expansion.rs  iter.rs  link.rs  multi.rs  seq.rs  type_parts.rs
rust/ffi/: Cargo.toml  readme.md
rust/ffi/env-decorators/: Cargo.toml
rust/ffi/env-decorators/src/: lib.rs
rust/ffi/ffi-attributes/: Cargo.toml
rust/ffi/ffi-attributes/src/: lib.rs
rust/ffi/nuget/: Doublets.FFI.nuspec  Platform.Data.Doublets.FFI.nuspec
rust/ffi/src/: lib.rs
rust/integration/: Cargo.toml
rust/integration/src/bins/: test-mem.rs
rust/profiling/src/: main.rs
rust/src/: lib.rs  test_extensions.rs
rust/src/bench/: mem.rs  mod.rs  tree.rs
rust/src/data/: constants.rs  converters.rs  doublet.rs  doublets.rs  error.rs  handler.rs  links.rs  mod.rs  point.rs  query.rs
rust/src/decorators/: cascade_unique_resolver.rs  cascade_usages_resolver.rs  ilinks_decorator.rs  log_all_changes.rs  non_null_deletion_resolver.rs  unique_resolver.rs  unique_validator.rs  usages_validator.rs
rust/src/doublets/: doublet.rs  doublets.rs  error.rs  flow.rs  handler.rs  ilinks.rs  link.rs  links.rs  mod.rs
rust/src/doublets/data/: constants.rs  converters.rs  hybrid.rs  ilinks.rs  links.rs  links_constants.rs  mod.rs  point.rs  query.rs
rust/src/doublets/decorators/: cascade_unique_resolver.rs  cascade_usages_resolver.rs  ilinks_decorator.rs  mod.rs  (+5 more)
rust/src/mem/: alloc_mem.rs  file_mapped_mem.rs  global_mem.rs  heap_mem.rs  ilinks_list_methods.rs  ilinks_tree_methods.rs  links_header.rs  mem.rs  mem_traits.rs  mod.rs  resizeable_base.rs  temp_file_mem.rs
rust/src/methods/: mod.rs
rust/src/num/: imp.rs  mod.rs
rust/src/sequences/: mod.rs
rust/src/tests/: crud.rs  decorators.rs  hybrid.rs  ilinks_basic.rs  mod.rs  safety.rs  sequences.rs  sync.rs  trees.rs
(+1157 files in other folders)
