[package]
name = "doublets"
version = "0.1.0-alpha.3"
edition = "2018"
authors = ["Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "LGPL-3.0"
repository = "https://github.com/linksplatform/Data.Doublets"
homepage = "https://github.com/linksplatform/Data.Doublets/blob/master/rust"
description = """
Modular framework to automation by automation
"""

[dependencies]
thiserror = "1.0.30"
num-traits = "0.2"
smallvec = "1.7.0"
memmap2 = "0.5.0"
rand = "0.8.0"
bumpalo = { version = "3.8.0", features = ["allocator_api"] }
tempfile = "3.2.0"
log = { version = "0.4.14", features = ["release_max_level_info", "max_level_info"] }
env_logger = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.test]
