[package]
name = "doublets"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "LGPL-3.0"
repository = "https://github.com/linksplatform/Data.Doublets"
homepage = "https://github.com/linksplatform/Data.Doublets/blob/master/rust"
description = """
Modular framework to automation by automation
"""

[dependencies]
thiserror = "1.0.30"
rand = "0.8.0"
bumpalo = { version = "3.8.0", features = ["allocator_api"] }
log = { version = "0.4.14", features = ["release_max_level_info", "max_level_info"] }
env_logger = "0.9.0"
num-traits = "^0.2.14"

data = { git = "https://github.com/linksplatform/platform-rs", package = "platform-data", version = "0.1.0" }
num = { git = "https://github.com/linksplatform/platform-rs", package = "platform-num", version = "0.1.0" }
mem = { git = "https://github.com/linksplatform/platform-rs", package = "platform-mem", version = "0.1.0" }
methods = { git = "https://github.com/linksplatform/platform-rs", package = "platform-treesmethods", version = "0.1.0" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.test]
