[package]
name = "doublets"
version = "0.1.0-beta.10"
edition = "2021"
authors = [
    "uselessgoddess",
    "Linksplatform Team <linksplatformtechnologies@gmail.com>"
]
categories = [
    "database-implementations", # wait rfcs#3185 "asynchronous"
]
keywords = [
    "associative", "doublets", "db",
]
readme = "../README.md"
license = "LGPL-3.0"
repository = "https://github.com/linksplatform/Data.Doublets"
homepage = "https://github.com/linksplatform/Data.Doublets/blob/main/rust"
description = """
Modular framework to automation by automation
"""

[dependencies]
rand = "0.8"
thiserror = "1.0.30"
num-traits = "^0.2.14"
leak_slice = "0.2"
yield-iter = "0.1.0"
smallvec = { version = "1.8", features = ["const_generics"] }

data = { package = "platform-data", version = "0.1.0-beta.1" }
num = { package = "platform-num", version = "0.1.0-alpha.1" }
mem = { package = "platform-mem", version = "0.1.0-beta.1" }
methods = { package = "platform-treesmethods", version = "0.1.0-alpha.2" }

[features]
mem = []
num = []
data = []
# todo: may be internal_platform
platform = ["mem", "num", "data"]

default = ["platform"]
full = ["platform"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "iter"
harness = false