[package]
name = "doublets-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
libc = "0.2.100"
tracing-subscriber = "0.3.3"
tracing-log = "0.1.2"
tracing = "0.1.29"
doublets = { path = ".." }
ffi-attributes = { path = "ffi-attributes" }

[package.log]
features = ["release_max_level_error"]
