[package]
name = "doublets-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4.14"
libc = "0.2.100"
tracing-subscriber = "0.3.3"
tracing-log = "0.1.2"
tracing = "0.1.29"
doublets = { path = "../doublets" }
data = { package = "platform-data", version = "0.1.0-alpha.0" }
num = { package = "platform-num", version = "0.1.0-alpha.0" }
mem = { package = "platform-mem", version = "0.1.0-alpha.4" }
ffi-attributes = { path = "ffi-attributes" }
env-decorators = { path = "env-decorators" }

[package.log]
features = ["release_max_level_error"]
